# app/Http/Controllers/Swagger/NewsController.php
@@ -149,6 +149,24 @@ use App\Http\Controllers\Controller;
  *             @OA\Property(property="id", type="integer", example=1)
  *         )
  *     )
+ * ),
+ *
+ * @OA\Get(
+ *     path="/api/v1/news/get-statuses",
+ *     summary="Получить статусы для новостей",
+ *     tags={"Новости"},
+ *     security={{ "bearerAuth": {} }},
+ *     description="Для любого пользователя возвращает статусы новостей.",
+ *
+ *     @OA\Response(
+ *         response=200,
+ *         description="successful operation",
+ *         @OA\JsonContent(
+ *              @OA\Property(property="statuses", type="array", @OA\Items(
+ *                  type="string"
+ *              ))
+ *         )
+ *     )
  * )
  */
 class NewsController extends Controller
